--- a/panel/index.html
+++ b/panel/index.html
@@ -377,6 +377,7 @@
                 <option value="robot">Robot Framework</option>
                 <option value="ruby-wd-rspec">Ruby (WebDriver + RSpec)</option>
                 <option value="xml">XML</option>
+                <option value="new-formatter-protractor">Protractor (Javascript)</option>
                 <!-- must start with new-formatter- -->
                 <option value="new-formatter-sample">Sample for new formatters</option>
             </select>
